--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -23,7 +23,6 @@
   --cake-color-link: #2d7ea4;
   --cake-color-progress: #d33c43;
   --vp-font-family-base: "Raleway", Helvetica, Arial, sans-serif;
-  --vp-font-family-body: "Raleway", Helvetica, Arial, sans-serif;
   --vp-c-brand-1: #d33c43;
   --vp-c-brand-2: #c8363d;
   --vp-c-brand-3: #b02e34;
@@ -55,70 +54,74 @@
 /* Hero Image Shadow */
 .VPHero .VPImage {
   filter: drop-shadow(-2px 4px 15px rgba(64, 64, 64, 0.3));
-}
 
-.dark .VPHero .VPImage {
-  filter: drop-shadow(-2px 4px 15px rgba(211, 60, 67, 0.2));
+  .dark & {
+    filter: drop-shadow(-2px 4px 15px rgba(211, 60, 67, 0.2));
+  }
 }
 
 /* Documentation Styles */
-.vp-doc a {
-  color: var(--cake-color-link);
-}
+.vp-doc {
+  & a {
+    color: var(--cake-color-link);
+  }
 
-.vp-doc strong,
-.vp-doc em,
-.vp-doc i,
-.vp-doc b,
-.vp-doc li,
-.vp-doc p {
-  font-family: var(--vp-font-family-body);
+  & strong,
+  & em,
+  & i,
+  & b,
+  & li,
+  & p {
+    font-family: var(--vp-font-family-body);
+  }
 }
 
 /* Custom Block Titles */
 .custom-block-title {
   padding-left: 33px;
   position: relative;
-}
 
-.custom-block-title:before {
-  display: block;
-  font-family: "cake_dingbatsregular";
-  font-size: 24px;
-  line-height: 24px;
-  position: absolute;
-  top: 1px;
-  left: 1px;
-  user-select: none;
+  &:before {
+    display: block;
+    font-family: "cake_dingbatsregular";
+    font-size: 24px;
+    line-height: 24px;
+    position: absolute;
+    top: 1px;
+    left: 1px;
+    user-select: none;
+  }
 }
 
 /* Custom Block Icons */
-.custom-block.tip .custom-block-title:before {
-  content: "X";
-  color: #97cae4;
-}
+.custom-block {
+  &.tip .custom-block-title:before {
+    content: "X";
+    color: #97cae4;
+  }
 
-.custom-block.note .custom-block-title:before {
-  content: "U";
-  color: #e2c99c;
-}
+  &.note .custom-block-title:before {
+    content: "U";
+    color: #e2c99c;
+  }
 
-.custom-block.warning .custom-block-title:before,
-.custom-block.deprecated .custom-block-title:before {
-  color: #e0b9b9;
-}
+  &.warning .custom-block-title:before,
+  &.deprecated .custom-block-title:before {
+    color: #e0b9b9;
+  }
 
-.custom-block.warning .custom-block-title:before {
-  content: "W";
-}
+  &.warning .custom-block-title:before {
+    content: "W";
+  }
 
-.custom-block.deprecated .custom-block-title:before {
-  content: "H";
-}
+  &.deprecated .custom-block-title:before {
+    content: "H";
+  }
 
-.custom-block.info .custom-block-title:before {
-  content: "V";
-  color: #a7d096;
+  &.info .custom-block-title:before {
+    content: "V";
+    color: #a7d096;
+  }
 }
 
 /** Improve content container real-estate **/
